@@ -64,7 +64,7 @@ configure(project.frameworkModules) {
     }
 
     dependencies {
-        implementation "org.slf4j:slf4j-api:${slf4jApiVersion}"
+        api "org.slf4j:slf4j-api:${slf4jApiVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     }
