@@ -2,7 +2,6 @@
  * @provides org.jminor.common.db.Database
  */
 module org.jminor.dbms.postgresql {
-  requires org.slf4j;
   requires transitive org.jminor.common.db;
 
   exports org.jminor.dbms.postgresql;
