@@ -2,7 +2,6 @@
  * Servlet application server.
  */
 module org.jminor.framework.servlet {
-  requires org.slf4j;
   requires java.ws.rs;
   requires javax.servlet.api;
   requires jetty.servlet;
