@@ -2,7 +2,6 @@
  * JavaFX ui application classes.
  */
 module org.jminor.javafx.framework {
-  requires org.slf4j;
   requires json;
   requires transitive javafx.graphics;
   requires transitive javafx.controls;
