@@ -1,5 +1,4 @@
 module org.jminor.framework.plugins.logback.proxy {
-  requires org.slf4j;
   requires ch.qos.logback.classic;
   requires org.jminor.common.core;
 
