@@ -1,5 +1,4 @@
 module org.jminor.swing.framework.model {
-  requires org.slf4j;
   requires json;
   requires transitive org.jminor.framework.model;
   requires transitive org.jminor.swing.common.model;
