@@ -1,5 +1,4 @@
 module org.jminor.swing.framework.server.monitor {
-  requires org.slf4j;
   requires jfreechart;
   requires org.jminor.framework.db.remote;
   requires org.jminor.framework.server;
